Changelog
=========

2020.2.0rc1 (unreleased)
------------------------

- Extend policytemplates with gever-ui activation. [elioschmutz]
- Restrict `geverui` cookie to admin unit. [elioschmutz]
- Extend the opengever deployment directive with workspace roles. [elioschmutz]
- Set seen_tours for all users in test fixture. [njohner]


2020.1.0 (2020-02-26)
---------------------

- Add smoke tests for rewrite rules and VHost configs. [lgraf]
- Add container title to task activities. [njohner]
- Set document_date and changed in bundle factory. [njohner]
- Handle changed and modified in ogg bundles. [njohner]
- Allow Administrators to add new keywords. [njohner]
- Implement @copy-document-to-workspace endpoint. [elioschmutz]
- Assign correct role Reader to reader_group. [deiferni]
- Allow administrators to deactivate dossiers. [njohner]
- Add permission and role to use the workspace Client. [njohner]
- Add french titles for initial content in the policytemplate. [phgross]
- Enable the solr flag in the policytemplate. [phgross]
- Implement @linked-workspaces endpoint. [elioschmutz]
- Implement @create-linked-workspace endpoint. [elioschmutz]


2020.1.0rc2 (2020-02-11)
------------------------

- Use Teamraum in mail header for invitations. [njohner]
- Integrate related workspaces to dossiers. [elioschmutz]
- Implement the teamraum client authentication flow. [elioschmutz]
- Implement the workspace client to make requests to a teamraum from GEVER. [elioschmutz]
- Implement the workspace client authentication flow. [elioschmutz]
- Handle deployments with no repository in navigation endpoint. [njohner]
- Only return create_task in actions endpoint on dossiers and tasks. [njohner]
- Fix JS ordering issue again. [njohner]
- Add documentation for sharing endpoint. [njohner]
- Always request UID from solr, as it is needed for snippets. [njohner]
- Speed up validation of dossier resolution preconditions. [njohner]