@@ -175,6 +175,14 @@ setup.workspace.required = True
 setup.workspace.default = False
 setup.workspace.post_ask_hook = mrbob.hooks:to_boolean
 
+deployment.workspace_creators_group.question = Worskpace creators group
+deployment.workspace_creators_group.default = tr_creators
+deployment.workspace_creators_group.required = False
+
+deployment.workspace_users_group.question = Worskpace userss group
+deployment.workspace_users_group.default = tr_users
+deployment.workspace_users_group.required = False
+
 setup.geverui.question = Enable GEVER UI
 setup.geverui.required = True
 setup.geverui.default = False
