@@ -1,0 +1,8 @@
+[
+    {
+        "_path": "workspaces",
+        "_type": "opengever.workspace.root",
+        "title_de": "Teamräume",
+        "title_fr": "Espace partagé"
+    }
+]
